test-span/tests/snapshots/tests__traced_span_tests__async_tracing_macro_works.snap
---
source: test-span/tests/tests.rs
assertion_line: 39
expression: logs

---
[
  {
    "entries": [
      [
        "message",
        "here i am!"
      ],
      [
        "message",
        "here i am!"
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:155",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "message",
        "here i am again!"
      ],
      [
        "message",
        "here i am again!"
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:173",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "message",
        "in a separate context!"
      ],
      [
        "message",
        "in a separate context!"
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:158",
      "target": "tests::traced_span_tests",
      "level": "WARN",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "number",
        52
      ],
      [
        "number",
        52
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:162",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "number"
        ]
      }
    }
  }
]
