test-span/tests/snapshots/tests__traced_span_tests__tracing_macro_works-2.snap
---
source: test-span/tests/tests.rs
assertion_line: 21
expression: get_span()

---
{
  "id": 1,
  "name": "tests::traced_span_tests::root",
  "record": {
    "entries": [
      [
        "message",
        "here i am!"
      ],
      [
        "message",
        "here i am again!"
      ],
      [
        "number",
        52
      ],
      [
        "message",
        "here i am!"
      ],
      [
        "message",
        "here i am again!"
      ],
      [
        "number",
        52
      ]
    ],
    "metadata": {
      "name": "root",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": []
      }
    }
  },
  "children": {
    "tests::traced_span_tests::do_sync_stuff - 2": {
      "id": 2,
      "name": "tests::traced_span_tests::do_sync_stuff",
      "record": {
        "entries": [
          [
            "message",
            "here i am!"
          ],
          [
            "message",
            "here i am again!"
          ],
          [
            "number",
            52
          ],
          [
            "message",
            "here i am!"
          ],
          [
            "message",
            "here i am again!"
          ],
          [
            "number",
            52
          ]
        ],
        "metadata": {
          "name": "do_sync_stuff",
          "target": "tests::traced_span_tests",
          "level": "INFO",
          "module_path": "tests::traced_span_tests",
          "fields": {
            "names": []
          }
        }
      },
      "children": {
        "my_crate::an_other_target::do_sync_stuff_2 - 3": {
          "id": 3,
          "name": "my_crate::an_other_target::do_sync_stuff_2",
          "record": {
            "entries": [
              [
                "number",
                42
              ]
            ],
            "metadata": {
              "name": "do_sync_stuff_2",
              "target": "my_crate::an_other_target",
              "level": "INFO",
              "module_path": "tests::traced_span_tests",
              "fields": {
                "names": [
                  "number"
                ]
              }
            }
          },
          "children": {}
        }
      }
    }
  }
}
