test-span/tests/snapshots/tests__traced_span_tests__tracing_macro_works.snap
---
source: test-span/tests/tests.rs
assertion_line: 24
expression: logs

---
[
  {
    "entries": [
      [
        "message",
        {
          "Debug": "here i am again!"
        }
      ],
      [
        "message",
        {
          "Debug": "here i am again!"
        }
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:158",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "message",
        {
          "Debug": "in a separate context!"
        }
      ],
      [
        "message",
        {
          "Debug": "in a separate context!"
        }
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:146",
      "target": "tests::traced_span_tests",
      "level": "WARN",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "message",
        {
          "Debug": "here i am!"
        }
      ],
      [
        "message",
        {
          "Debug": "here i am!"
        }
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:149",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "message"
        ]
      }
    }
  },
  {
    "entries": [
      [
        "number",
        {
          "Value": 52
        }
      ],
      [
        "number",
        {
          "Value": 52
        }
      ]
    ],
    "metadata": {
      "name": "event test-span/tests/tests.rs:151",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": [
          "number"
        ]
      }
    }
  }
]
