test-span/tests/snapshots/tests__traced_span_tests__tracing_macro_works_with_other_level.snap
---
source: test-span/tests/tests.rs
assertion_line: 48
expression: logs

---
[
  [
    "message",
    "here i am!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ],
  [
    "message",
    "here i am!"
  ],
  [
    "number",
    52
  ],
  [
    "number",
    42
  ],
  [
    "message",
    "here i am again!"
  ]
]
