test-span/tests/snapshots/tests__traced_span_tests__tracing_works.snap
---
source: test-span/tests/tests.rs
assertion_line: 76
expression: logs

---
[
  {
    "entries": [],
    "metadata": {
      "name": "root",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": []
      }
    }
  },
  {
    "entries": [
      [
        "message",
        "here i am!"
      ],
      [
        "number",
        52
      ]
    ],
    "metadata": {
      "name": "do_sync_stuff",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": []
      }
    }
  },
  {
    "entries": [
      [
        "message",
        "here i am!"
      ],
      [
        "number",
        52
      ]
    ],
    "metadata": {
      "name": "do_sync_stuff",
      "target": "tests::traced_span_tests",
      "level": "INFO",
      "module_path": "tests::traced_span_tests",
      "fields": {
        "names": []
      }
    }
  }
]
